# homelab_os

./: .env  .gitignore  CONTROL_CENTER_RECOVERY_PATCH_v3.2.1.md  README.md  README_FIXED_INSTALLER.md  README_V3_1_STABLE_FIXES.md  bootstrap.py  pyproject.toml
config/: app_catalog.json
core/: app.py  cli.py  config.py  control_plane.py  watchdog_entry.py
docs/: 00_docs_index.md  00_self_understanding.md  01_architecture_overview.md  01_quickstart.md  01_structure.md  02_architecture.md  02_edit_build_install.md  02_repository_map.md  03_control_center_upgrade.md  03_plugin_manifest_spec.md  03_project_structure.md  04_bundle_authoring.md  04_file_wise_code_flow.md  04_plugin_lifecycle.md  05_control_center_ui_and_routes.md  05_core_services_map.md  05_homelabctl_cli_usage.md  05_install_guard_and_watchdog.md  06_build_install_runtime.md  06_project_structure_guide.md  06_recovery_and_dns.md  07_cli_reference.md  07_control_shell.md  08_github_publishing.md  08_migration_from_legacy_repo.md  08_release_and_github.md  09_developer_guide.md  09_examples.md  10_app_maintenance_matrix.md  10_troubleshooting.md  11_bootstrap_cli_flow.md  11_public_repo_checklist.md  BUNDLES_DEEP_DIVE.md  DEBUGGING_GUIDE.md  WATCHDOG.md
homelab_os/: __init__.py
homelab_platform/: __main__.py  cli.py  config.py  watchdog_entry.py  web.py
manifests/: api_gateway.json  dictionary.json  files.json  homarr.json  installed_plugins.json  jobs.json  link_downloader.json  pihole.json  plugin_state.json  status.json
systemd/: homelab-os-core.service.example  homelab-watchdog.service  (+2 more)
(+335 files in other folders)
